public/stylesheets/styles.css
/*** Content Styles ***/
* {
  margin: 0;
  padding: 0;
}

body {
  background-image: url(../images/bkgd.png);
  background-repeat: repeat-x;
  background-color: #363636;
  color: #1c140d;
  font-family: Tahoma, Geneva, sans-serif;	
}

a {
  color: #c34a18;
  text-decoration: none;
}

a:hover {
  color: #c34a18;
  text-decoration: underline;
  cursor: pointer;
}

img {
  border: none;
}

#rss {
  margin: 0;
  padding: 10px 50px 2px 0;
  border: none;
  float: right;
}

#google_translate_element {
  margin: 0;
  padding: 2px 50px 2px 0;
  float: right;
  text-align: right;
  clear: both;
}

img.right {
  margin: 10px;
  padding: 10px;
  float: right;
}

a img.link {
  cursor: pointer;
}

h1 {
  font-size: 24px;
  letter-spacing: 1px;

  margin-top: 16px;
  margin-bottom: 16px;
}

h2 {
  font-size: 22px;
  letter-spacing: 1px;

  margin-top: 16px;
  margin-bottom: 16px;
}

h3 {
  font-size: 20px;
  letter-spacing: 1px;

  margin-top: 14px;
  margin-bottom: 14px;
}

h4 {
  font-size: 18px;
  letter-spacing: 1px;

  margin-top: 14px;
  margin-bottom: 14px;
}

h4.ul-table {
  padding: 0 0 0 12px;
  text-decoration: underline;
}

p {
  font-size: 14px;
  line-height: 18px;
  letter-spacing: 1px;

  margin-top: 14px;
  margin-bottom: 14px;
}

#main {
  margin-top: 10px;
  margin-bottom: 20px;
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
  width: 1000px;
}

#content {
  margin: 0;
  padding: 0;
  background-color: #bbd1a6;

  width: 100%;

  text-align: left;
  overflow: hidden;
}

#logo {
  margin: 10px 0 10px 15px;
  padding: 0;
  background-image: url(../images/logo.jpg);
  background-repeat: no-repeat;
  height: 115px;
}

#logo_left {
  width: 450px;
  height: 115px;
  cursor: pointer;
  float: left;
}

#logo_right {
  width: 250px;
  height: 115px;
  float: right;
}

#frame {
  margin: 10px 15px 15px 15px;
  padding: 0;

  background-color: #efede9;

  width: 965px;
  overflow: hidden;
}

#singlecol {
  margin: 10px 5px 10px 10px;
  padding: 0 10px 25px 15px;

  background-color: #ffffff;
  width : 920px;
  height: auto;

  float: left;
}

#description {
  margin: 10px 0 0 5px;
  padding: 0;
}

#description p, #description ul li {
  font-size: 12px;
  color: #777;
}

#description ul li {
  list-style-type: none;
}

.urls a {
  margin: 0;
  padding: 5px 0 0 10px;
  font-size: 12px;
}

.strong {
  font-weight: bold;
}

.right {
  text-align: right;
}

.small_right {
  padding: 0 20px 0 0;
  font-size: 12px;
  text-align: right;
}

.refs {
  font-size: 11px;
  font-weight: bold;
  white-space: normal;
}

ul {
  margin-top: 14px;
  margin-bottom: 14px;
}

ul li {
  margin: 0 0 0 25px;
  padding: 0;

  font-size: 14px;
  line-height: 17px;
}

hr {
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;
  padding: 0;
  width: 97%;
  color: #1c140d;
}

#footer {
  margin: 10px 0 10px 0 ;
  padding: 0 0 10px 0;

  text-align: center;

  color: #777;
  font-size: 14px;
}

#footer a {
  color: #d32133;
  text-decoration: none;
}

#footer a:hover {
  text-decoration: underline;
}
/*** End ***/

